# aws-lc

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  API-CONVENTIONS.md  BREAKING-CHANGES.md  BUILDING.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.coq  Dockerfile.nsym  Dockerfile.saw  Dockerfile.saw_aarch64  Dockerfile.saw_x86  Dockerfile.saw_x86_aes_gcm  FUZZING.md  INCORPORATING.md  LICENSE  META.yml  NOTICE  PLAN.md  PORTING.md  PORTING_TO_AWSLC.md  README.md  SANDBOXING.md  SPEC.md  STYLE.md  TESTING_CI_IS_WORKING_AS_EXPECTED  VERSIONING.md  action.yml  aead.h.html  aes.h.html  asn1.h.html  base64.h.html  bio.h.html  bn.h.html  (+53 more)
crypto/: CMakeLists.txt  abi_self_test.cc  compiler_test.cc  constant_time_test.cc  cpu-aarch64-fuchsia.c  cpu-aarch64-linux.c  cpu-aarch64-win.c  cpu-arm-linux.c  cpu-arm-linux.h  cpu-arm-linux_test.cc  cpu-arm.c  cpu-intel.c  cpu-ppc64le.c  crypto-config.cmake  crypto.c  crypto_test.cc  dynamic_loading_test.c  endian_test.cc  ex_data.c  fips_callback_test.cc  impl_dispatch_test.cc  internal.h  libcrypto.map  libcrypto.txt  mem.c  mem_set_test.cc  mem_test.cc  refcount_c11.c  refcount_lock.c  refcount_test.cc  refcount_win.c  regular_mem_test.cc  rwlock_static_init.cc  self_test.cc  thread.c  thread_none.c  thread_pthread.c  thread_test.cc  thread_win.c  windows_mem_test.cc
crypto/asn1/: a_bitstr.c  a_bool.c  a_d2i_fp.c  a_dup.c  a_enum.c  a_gentm.c  a_i2d_fp.c  a_int.c  a_mbstr.c  a_object.c  a_octet.c  a_print.c  a_strex.c  a_strnid.c  a_time.c  a_type.c  a_utctm.c  a_utf8.c  asn1_lib.c  asn1_locl.h  asn1_par.c  asn1_test.cc  asn_pack.c  charmap.pl  f_enum.c  f_int.c  f_string.c  internal.h  posix_time.c  tasn_dec.c  tasn_enc.c  tasn_fre.c  tasn_new.c  tasn_typ.c  tasn_utl.c  time_support.c
crypto/base64/: base64.c  base64_test.cc
crypto/bio/: bio.c  bio_addr.c  bio_deprecated_test.cc  bio_md_test.cc  bio_mem.c  bio_socket_test.cc  bio_test.cc  cipher.c  connect.c  dgram.c  errno.c  fd.c  file.c  hexdump.c  internal.h  md.c  pair.c  printf.c  socket.c  socket_helper.c
crypto/blake2/: blake2.c  blake2_test.cc  blake2b256_tests.txt
crypto/bn_extra/: bn_asn1.c  convert.c
crypto/buf/: buf.c  buf_test.cc
crypto/bytestring/: asn1_compat.c  ber.c  bytestring_test.cc  cbb.c  cbs.c  internal.h  unicode.c
crypto/chacha/: chacha.c  chacha_test.cc  internal.h
crypto/cipher_extra/: aead_fork_test.cc  aead_test.cc  cipher_extra.c  cipher_test.cc  cts.c  cts_test.cc  derive_key.c  e_aes_cbc_hmac_sha1.c  e_aes_cbc_hmac_sha256.c  e_aesccm.c  e_aesctrhmac.c  e_aesgcmsiv.c  e_chacha20poly1305.c  e_des.c  e_null.c  e_rc2.c  e_rc4.c  e_tls.c  internal.h  tls_cbc.c
crypto/cmac/: cmac.c  cmac_test.cc
crypto/cmake/: crypto-config.cmake
crypto/conf/: conf.c  conf_def.h  conf_test.cc  internal.h
crypto/console/: console.c  console_test.cc  internal.h
crypto/cpucycles/: cpucycles.c
crypto/curve25519/: curve25519.c  curve25519_nohw.c  curve25519_s2n_bignum_asm.c  curve25519_tables.h  ed25519_test.cc  ed25519_tests.txt  internal.h  make_curve25519_tables.py  spake25519.c  spake25519_test.cc  x25519_test.cc
crypto/curve25519_extra/: curve25519_extra.c  internal.h
crypto/decrepit/: macros.h
crypto/des/: des.c  des_test.cc  internal.h
crypto/dh_extra/: dh_asn1.c  dh_test.cc  params.c
crypto/digest_extra/: digest_extra.c  digest_test.cc
crypto/dilithium/: README.md  dilithium3_ref.c  internal.h  ml_dsa.c  ml_dsa.h  p_dilithium3.c  p_dilithium3_asn1.c  p_dilithium_test.cc  p_pqdsa.c  p_pqdsa_asn1.c  p_pqdsa_test.cc  pq_sig_kat_tests_dilithium3.cc  pqdsa.c  sig_dilithium.h  sig_dilithium3.c
crypto/dsa/: dsa.c  dsa_asn1.c  dsa_test.cc  internal.h
fuzz/: CMakeLists.txt  arm_cpuinfo.cc  asn1parse.cc  blowfish.cc  bn_div.cc  bn_mod_exp.cc  cert.cc  client.cc  conf.cc  decode_client_hello_inner.cc  der_roundtrip.cc  dtls_client.cc  dtls_server.cc  minimise_corpora.sh  ocsp.cc  ocsp_http.cc  ocsp_parse_url.cc  pkcs12.cc  pkcs7_decrypt.cc  pkcs7_verify.cc  pkcs8.cc  pkcs8_v2.cc  privkey.cc  read_pem.cc  refresh_ssl_corpora.sh  server.cc  session.cc  spki.cc  ssl_buffer.cc  ssl_ctx_api.cc  ssl_serialization.cc
pq-crypto/: CMakeLists.txt  EVP_kem.c  EVP_kem.h  EVP_pq_constants.h  README.md  internal.h  pq_kem.c  pq_kem.h  pq_kem_params_size.h  pq_kem_test.cc  sikep434r3_kem.c
ssl/: CMakeLists.txt  bio_ssl.cc  custom_extensions.cc  d1_both.cc  d1_lib.cc  d1_pkt.cc  d1_srtp.cc  dtls_method.cc  dtls_record.cc  encrypted_client_hello.cc  extensions.cc  handoff.cc  handshake.cc  handshake_client.cc  handshake_server.cc  internal.h  libssl.map  libssl.txt  s3_both.cc  s3_lib.cc  s3_pkt.cc  span_test.cc  ssl_aead_ctx.cc  ssl_alps_test.cc  ssl_alps_tests.cc  ssl_asn1.cc  ssl_buffer.cc  ssl_c_test.c  ssl_cert.cc  ssl_cipher.cc  ssl_ciphers_test.cc  ssl_client_hello_test.cc  ssl_common_test.cc  ssl_common_test.h  ssl_decrepit.c  ssl_ech_test.cc  ssl_encoding_test.cc  ssl_file.cc  ssl_handshake_test.cc  ssl_hybrid_handshake_test.cc  (+28 more)
tests/: CMakeLists.txt  Makefile  arch.h  c99_gcc_test.sh  check_cmake_configure.sh  check_generated_src.sh  check_licenses.go  check_objects_and_errors.sh  known_value_testgen.ml  test.c  tweetnacl_excerpt.c
tool/: CMakeLists.txt  README.md  args.cc  benchmark.cc  bssl_bm.h  ciphers.cc  client.cc  const.cc  digest.cc  fd.cc  file.cc  generate_ech.cc  generate_ed25519.cc  genrsa.cc  internal.h  ossl_bm.h  ossl_internal.h  pkcs12.cc  rand.cc  server.cc  sign.cc  speed.cc  tool.cc  transport_common.cc  transport_common.h
tool-openssl/: CMakeLists.txt  README.md  asn1parse.cc  asn1parse_test.cc  c_rehash.sh  c_rehash_test.sh  ca.cc  ca.h  ca_req_common.cc  ca_req_common.h  ca_test.cc  crl.cc  crl_test.cc  dgst.cc  dgst_test.cc  dhparam.cc  dhparam_test.cc  ec.cc  ec_test.cc  ecparam.cc  ecparam_test.cc  enc.cc  enc_test.cc  genpkey.cc  genpkey_test.cc  genrsa.cc  genrsa_test.cc  internal.h  md5.cc  md5_test.cc  ordered_args.cc  pass_util.cc  pass_util_test.cc  password_test.cc  pkcs8.cc  pkcs8_test.cc  pkey.cc  pkey_test.cc  pkeyutl.cc  pkeyutl_test.cc  (+20 more)
(+6137 files in other folders)
